fix: don't let text overflow affect layout

--- a/packages/elements/src/styles/_API.scss
+++ b/packages/elements/src/styles/_API.scss
@@ -17,10 +17,7 @@
 
   .TableOfContents {
     width: 300px;
-  }
-
-  .ContentViewer {
-    overflow: hidden;
+    min-width: 250px;
   }
 }
 
